Refactor of types for smoother code and minor code fixes

--- a/src/main/js/html/calendar.html
+++ b/src/main/js/html/calendar.html
@@ -136,7 +136,7 @@
             </select>
           </div>
           <div class="colx2-right">
-            <button data-ng-click="calCtrl.autoFill()">Autofill</button>
+            <a href="#assessment/{{calCtrl.editAppointment.id}}">Open</a>
           </div>
         </div>
         <label>Nurse</label>
