--- a/src/main/js/html/intake.html
+++ b/src/main/js/html/intake.html
@@ -150,8 +150,8 @@
             <div class="colx3-left">
               <p>
                 <span class="label">Accepted?</span>
-                <input type="radio" name="accepted[]" id="simple-checkbox-1" value="1">&nbsp;<label for="accepted-1">Yes</label>
-                <input type="radio" name="accepted[]" id="simple-checkbox-2" value="2">&nbsp;<label for="accepted-2">No</label>
+                <input type="radio" name="accepted[]" id="accepted-1" value="1">&nbsp;<label for="accepted-1">Yes</label>
+                <input type="radio" name="accepted[]" id="accepted-2" value="2">&nbsp;<label for="accepted-2">No</label>
               </p>
             </div>
             <p class="colx3-right-double">
@@ -163,8 +163,8 @@
             <span class="label"></span>
             <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-1" value="1">&nbsp;<label for="simple-checkbox-1">Confirmed w/ Vendor</label>
             <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-2" value="2">&nbsp;<label for="simple-checkbox-2">Confirmed w/ Nurse</label>
-            <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-2" value="2">&nbsp;<label for="simple-checkbox-2">Sent Patient Info</label>
-            <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-2" value="2">&nbsp;<label for="simple-checkbox-2">Added to Calendar</label>
+            <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-3" value="2">&nbsp;<label for="simple-checkbox-2">Sent Patient Info</label>
+            <input type="checkbox" name="simple-checkbox[]" id="simple-checkbox-4" value="2">&nbsp;<label for="simple-checkbox-2">Added to Calendar</label>
           </p>
           <div class="columns">
             <div class="colx2-left">
