--- a/src/main/js/html/patient.html
+++ b/src/main/js/html/patient.html
@@ -9,7 +9,7 @@
       </ul>
       <div class="tabs-content">
         <div data-ng-if="patientCtrl.selectedTab == patientCtrl.tabs.calendar" style="height: 640px;">
-          <iis-calendar entity-type="patient" entity-id="{{patientCtrl.patient.id}}"></iis-calendar>
+          <iis-calendar entity-type="patient" entity-id="{{patientCtrl.patientId}}"></iis-calendar>
         </div>
         <div data-ng-if="patientCtrl.selectedTab == patientCtrl.tabs.general">
           <div class="block-content form">
