--- a/src/main/js/html/vendor.html
+++ b/src/main/js/html/vendor.html
@@ -9,7 +9,7 @@
 			</ul>
 			<div class="tabs-content">
 				<div data-ng-if="vendorCtrl.selectedTab == vendorCtrl.tabs.calendar">
-					<iis-calendar entity-type="vendor" entity-id="{{vendorCtrl.vendor.id}}"></iis-calendar>
+					<iis-calendar entity-type="vendor" entity-id="{{vendorCtrl.vendorId}}"></iis-calendar>
 				</div>
 				<div data-ng-if="vendorCtrl.selectedTab == vendorCtrl.tabs.general">
 					<div class="block-content form">
