--- a/src/main/js/html/dashboard.html
+++ b/src/main/js/html/dashboard.html
@@ -4,19 +4,21 @@
       <div data-dd4-table="TableType.PENDING_INTAKE"></div>
     </div>
     <div class="colx2-right">
-      <div data-dd4-table="TableType.PENDING_ASSESSMENT"></div>
+      <div data-dd4-table="TableType.UNCONFIRMED"></div>
     </div>
   </div>
   <div class="columns">
     <div class="colx2-left">
-      <div data-dd4-table="TableType.REVIEWABLE"></div>
+      <div data-dd4-table="TableType.PENDING_ASSESSMENT"></div>
     </div>
     <div class="colx2-right">
-      <div data-dd4-table="TableType.LICENSE_ALERT"></div>
+      <div data-dd4-table="TableType.REVIEWABLE"></div>
     </div>
   </div>
   <div class="columns">
-    <div data-dd4-table="TableType.UNCONFIRMED"></div>
+    <div class="colx2-right">
+      <div data-dd4-table="TableType.LICENSE_ALERT"></div>
+    </div>
   </div>
   <div class="columns">
     <iis-calendar data-on-update="dashboardCtrl.refreshTables()"></iis-calendar>
