--- a/src/main/js/html/assessment.html
+++ b/src/main/js/html/assessment.html
@@ -40,8 +40,19 @@
                   <input type="text" data-ng-model="assessmentCtrl.appointment.mileage" size="3"
                          data-on-change="assessmentCtrl.updateAppointment('mileage')">
                 </p>
+                </p>
                 <div class="colx3-left">
-                  <button data-ng-click="assessmentCtrl.showUploadDialog()">Upload File</button>
+                  <div data-ng-if="assessmentCtrl.appointment.assessmentReport">
+                    <a href="{{appCtrl.getFileUrl(assessmentCtrl.appointment.assessmentReport)}}"
+                       class="document-pdf" target="_blank">
+                      <img src="images/icons/fugue/document-pdf.png" width="16" height="16">
+                      Download</a>
+                    <a href="" data-ng-click="assessmentCtrl.showDeleteFileDialog()">
+                      <img src="images/icons/fugue/cross-circle.png" width="16" height="16">
+                    </a>
+                  </div>
+                  <button data-ng-if="!assessmentCtrl.appointment.assessmentReport"
+                          data-ng-click="assessmentCtrl.showUploadDialog()">Upload File</button>
                 </div>
                 <p class="colx3-center">
                   <label>Assessment Complete</label>
@@ -128,6 +139,21 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+    <div data-ng-show="assessmentCtrl.uploadDialogShown" id="modal" style="display: block;">
+      <div class="modal-window block-border" style="display: block; left: 388px; top: 50px; width: 400px;">
+        <ul class="action-tabs right">
+          <li><a data-ng-click="assessmentCtrl.closeUploadDialog()" title="Close">
+            <img src="images/icons/fugue/cross-circle.png" width="16" height="16">
+          </a></li>
+        </ul>
+        <div class="block-content form">
+          <p>Select file to upload.</p>
+          <input type="file" id="file" name="file"/>
+          <button data-ng-click="assessmentCtrl.uploadFile()">Upload</button>
+          <button data-ng-click="assessmentCtrl.closeUploadDialog()">Cancel</button>
         </div>
       </div>
     </div>
