--- a/src/main/js/html/intake.html
+++ b/src/main/js/html/intake.html
@@ -56,7 +56,7 @@
             <div class="colx3-left">
               <p><span class="label">Patient Type</span>
                 <div data-ng-repeat="generalData in generalDataService.list(GeneralData.PATIENT_STATUS) | orderBy:'rank'">
-                  <input type="radio" data-ng-model="intakeCtrl.patient.patientStatusId" value="{{generalData.id}}">
+                  <input type="radio" data-ng-model="intakeCtrl.patient.typeId" value="{{generalData.id}}">
                   <label>{{generalData.name}}</label>
                 </div>
               </p>
